# 2023NUEDC

./: .gitignore  README.md
CHV307_Library-master/Example/E01_gpio_demo/user/src/: main.c
CHV307_Library-master/Example/E02_uart_demo/user/src/: isr.c
CHV307_Library-master/Example/E03_adc_demo/user/src/: isr.c
CHV307_Library-master/Example/E04_pwm_demo/user/src/: isr.c
CHV307_Library-master/Example/E05_pit_demo/user/src/: isr.c  main.c
CHV307_Library-master/Example/E07_encoder_demo/user/src/: isr.c
CHV307_Library-master/Example/E09_timer_demo/user/src/: isr.c
CHV307_Library-master/Example/E10_printf_debug_log_demo/user/src/: main.c
CHV307_Library-master/Example/E11_interrupt_priority_set_demo/user/src/: isr.c
CHV307_Library-master/Seekfree_CH32V307VCT6_Opensource_Library/libraries/zf_common/: zf_common_debug.h  zf_common_headfile.h
CHV307_Library-master/Seekfree_CH32V307VCT6_Opensource_Library/project/code/: upacker.c  upacker.h
CHV307_Library-master/Seekfree_CH32V307VCT6_Opensource_Library/project/mrs/: .cproject
CHV307_Library-master/Seekfree_CH32V307VCT6_Opensource_Library/project/user/src/: isr.c  main.c
Ccode/green_firm/: CMakeLists.txt
Ccode/green_firm/project/code/: ctrl.c  ctrl.h  cursor.c  cursor.h  easy_key.c  easy_ui.c  easy_ui.h  easy_ui_user_app.c  inc_all.h  moto.c  moto.h  pid.c  pid.h  upacker.h  user_flash.c  user_flash.h  user_ips114.c  user_ips114.h
Ccode/green_firm/project/user/src/: isr.c  main.c
Ccode/red_firm/: CMakeLists.txt
Ccode/red_firm/libraries/doc/: version.txt
Ccode/red_firm/libraries/zf_device/: zf_device_icm20602.h  zf_device_imu660ra.h  zf_device_ips114.h  zf_device_mt9v03x_dvp.h
Ccode/red_firm/project/code/: buzzer.c  buzzer.h  ctrl.c  ctrl.h  easy_ui.h  easy_ui_user_app.c  easy_ui_user_app.h  inc_all.h  ips096.c  moto.h  pid.h  user_header.h  vofa.c  vofa.h
Ccode/red_firm/project/user/src/: isr.c  main.c
PyCode/: CameraDemo.py  UartDemo.py  main.py  takeAphoto_DS.py
